--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "doctrine/orm": "^2.13",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
-        "sensio/framework-extra-bundle": "^6.1",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "6.1.*",
         "symfony/console": "6.1.*",
@@ -105,6 +105,7 @@
         "symfony/maker-bundle": "^1.46",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "6.1.*",
+        "symfony/var-dumper": "6.1.*",
         "symfony/web-profiler-bundle": "6.1.*"
     }
 }
