--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,10 @@
 
 ### vs code ###
 .vscode
-node_modules
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
