--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,9 @@
         "symfony/webpack-encore-bundle": "^1.15",
         "symfony/yaml": "6.1.*",
         "symfonycasts/verify-email-bundle": "^1.11",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twbs/bootstrap-icons": "^1.9",
+        "twig/extra-bundle": "^3.4",
+        "twig/intl-extra": "^3.4",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
