--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "aws4": "^1.11.0",
     "balanced-match": "^1.0.2",
     "bcrypt-pbkdf": "^1.0.2",
+    "bootstrap-icons": "^1.9.1",
     "brace-expansion": "^1.1.11",
     "browserslist": "^4.21.4",
     "buffer-from": "^1.1.2",
